[dependencies]
ferrisgram = "0.2.1"
async-std = "1.13.0"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"

[profile.release]
lto = true
opt-level = "s"
incremental = true
strip = true
panic = "unwind"

[package]
name = "rustrobot"
version = "0.0.1"
include = ["/src"]
edition = "2021"
