[dependencies]
ferrisgram = "0.2.1"
async-std = "1.13.0"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.133"
hyper = { version = "1.5.1", features = ["full", "server"] }
serde = { version = "1.0.216", features = ["derive"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["tokio"] }

[profile.release]
lto = true
opt-level = "s"
incremental = true
strip = true
panic = "unwind"

[package]
name = "rustrobot"
version = "0.0.1"
include = ["/src"]
edition = "2021"
